added meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <title>Elliot Waves Calculator</title>
     <meta charset="UTF-8" />
-
+    <meta property="og:title" content="Elliot Waves Calculator" />
+    <meta property="og:type" content="Website" />
+    <meta
+      property="og:url"
+      content="https://abhiib02.github.io/elliot_wave_calc/"
+    />
+    <meta
+      property="og:description"
+      content="A calculator which utilizes elliot wave theory in technical chart analysis to determine possible price peaks and bottoms."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
