--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           Elliot Waves Calculator
         </h1>
         <div class="mb-2 d-flex justify-content-center">
-          Just Tell Me Wave 1 Starting and ending price
+          Just Tell Me Wave 1 Starting and ending price <br />
+          Not for intraday Trader
         </div>
       </div>
       <div id="form" class="row">
