--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
         height: 100vh;
         display: grid;
         place-items: center;
-        background: linear-gradient(
-          to right,
-          #808080,
-          #3fada8
-        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background-image: url("https://images.unsplash.com/photo-1640459958548-56c1c6717a40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+        background-size: cover; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       }
       #my-chart.line {
         height: 500px;
