--- a/index.html
+++ b/index.html
@@ -1,190 +1,175 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Elliot Waves Calculator</title>
-    <meta charset="UTF-8" />
-    <meta property="og:title" content="Elliot Waves Calculator" />
-    <meta property="og:type" content="Website" />
-    <meta
-      property="og:url"
-      content="https://abhiib02.github.io/elliot_wave_calc/"
-    />
-    <meta
-      property="og:description"
-      content="A calculator which utilizes elliot wave theory in technical chart analysis to determine possible price peaks and bottoms."
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      table {
-        width: 100%;
-      }
-      table td,
-      table th {
-        border: 1px solid #ddd;
-        padding: 8px;
-      }
-      body {
-        height: 100vh;
-        display: grid;
-        place-items: center;
-        background-image: url("https://images.unsplash.com/photo-1640459958548-56c1c6717a40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-        background-size: cover; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      }
-      #my-chart.line {
-        height: 500px;
-        max-width: 70%;
-        margin: 0 auto;
-      }
-    </style>
-  </head>
-  <body class="">
-    <div class="container">
-      <div class="text-light">
-        <h1 class="p-2 d-flex justify-content-center">
+
+<head>
+	<title>Elliot Waves Calculator</title>
+	<meta charset="UTF-8" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/charts.css/dist/charts.min.css" />
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+	<style>
+	table {
+		width: 100%;
+	}
+	
+	#coins {
+		display: table-caption;
+		width: inherit;
+		min-height: 300px;
+		max-height: 300px;
+		overflow-y: scroll;
+	}
+	
+	#coins > tr {
+		display: flex;
+		border-bottom-width: 1px;
+		justify-content: space-between;
+		text-align: center;
+	}
+	
+	#coins > tr > td {
+		width: 33%;
+	}
+	
+	body {
+		min-height: 100vh;
+		display: grid;
+		place-items: center;
+		background: url("https://images.unsplash.com/photo-1640459958548-56c1c6717a40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+		/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+		background-size: cover;
+		background-attachment: fixed;
+	}
+	
+	#my-chart.line {
+		height: 500px;
+		max-width: 70%;
+		margin: 0 auto;
+	}
+	</style>
+</head>
+
+<body class="">
+	<div class="container">
+		<div class="text-light">
+			<h1 class="p-2 d-flex justify-content-center">
           Elliot Waves Calculator
         </h1>
-        <div class="mb-2 d-flex justify-content-center">
-          Just Tell Me Wave 1 Starting and ending price <br />
-          Not for intraday Trader
-        </div>
-      </div>
-      <div id="form" class="row">
-        <div class="col-lg-4 card p-3">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label"
-              >Wave 1 Starting Point Price</label
-            >
-            <input type="number" class="form-control" id="wave1s" />
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label"
-              >Wave 1 Ending Point Price</label
-            >
-            <input type="number" class="form-control" id="wave1e" />
-          </div>
-          <div class="d-grid gap-2 m-2">
-            <button id="submit" class="btn btn-success">Submit</button>
-            <button
-              id="getChart"
-              type="button"
-              class="btn btn-primary"
-              data-bs-toggle="modal"
-              data-bs-target="#exampleModal"
-              disabled
-            >
-              Get Line Chart
-            </button>
-
-            <div
-              class="modal fade"
-              id="exampleModal"
-              tabindex="-1"
-              aria-labelledby="exampleModalLabel"
-              aria-hidden="true"
-            >
-              <div class="modal-dialog modal-fullscreen">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">
+			<div class="mb-2 d-flex justify-content-center"> Just Tell Me Wave 1 Starting and ending price </div>
+		</div>
+		<div id="form" class="row">
+			<div class="col-lg-3 card p-3">
+				<div class="mb-3">
+					<label for="exampleInputEmail1" class="form-label">Wave 1 Starting Point Price</label>
+					<input type="number" class="form-control" id="wave1s" placeholder="Point 0"/> </div>
+				<div class="mb-3">
+					<label for="exampleInputPassword1" class="form-label">Wave 1 Ending Point Price</label>
+					<input type="number" class="form-control" id="wave1e" placeholder="Point 1" /> </div>
+				<button id="submit" class="btn btn-success">Calculate</button>
+				<div class="row">
+					<div class="col-sm-6 mt-1">
+						<div class="d-grid gap-2">
+							<button id="save" class="btn btn-primary" disabled>Save</button>
+						</div>
+					</div>
+					<div class="col-sm-6 mt-1">
+						<div class="d-grid gap-2">
+							<button id="getChart" type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" disabled> Chart </button>
+						</div>
+					</div>
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog modal-fullscreen">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">
                       Chart Represtation of elliot waves
                     </h5>
-                    <button
-                      type="button"
-                      class="btn-close"
-                      data-bs-dismiss="modal"
-                      aria-label="Close"
-                    ></button>
-                  </div>
-                  <div class="modal-body">
-                    <div class="chart"></div>
-                  </div>
-                  <div class="modal-footer">
-                    <button
-                      type="button"
-                      class="btn btn-secondary"
-                      data-bs-dismiss="modal"
-                    >
-                      Close
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+								</div>
+								<div class="modal-body">
+									<div class="chart"></div>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> Close </button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6 card p-3">
+				<div class="waves">
+					<table class="table rounded table-striped">
+						<thead>
+							<tr>
+								<th>Points</th>
+								<th>Price</th>
+								<th>Price 2</th>
+								<th>Price 3</th>
+							</tr>
+							<thead>
+								<tr>
+									<td>Point 0</td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Point 1</td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Point 2</td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr class="table-dark">
+									<td>(if Point3 is)</td>
+									<td style="background: #0d53a8;"><b>Normal</b></td>
+									<td style="background: #0da872;"><b>Extended</b></td>
+									<td style="background: #1f7308;"><b>Fully Extended</b></td>
+								</tr>
+								<tr>
+									<td>Point 3</td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Point 4</td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Point 5</td>
+									<td></td>
+									<td></td>
+									<td></td>
+								</tr>
+					</table>
+				</div>
+			</div>
+			<div class="col-lg-3 card p-3">
+				<table class="table rounded table-striped">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Point 0</th>
+							<th>Point 1</th>
+						</tr>
+					</thead>
+					<tbody id="coins"> </tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	<!-- Modal -->
+	</div>
+	<script src="src/index.js"></script>
+</body>
 
-        <div class="col-lg-8 card p-3">
-          <div class="waves">
-            <table>
-              <tr>
-                <td>Points</td>
-                <td>Price</td>
-                <td>Price 2</td>
-                <td>Price 3</td>
-              </tr>
-              <tr>
-                <td>Point 0</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Point 1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Point 2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr class="text-light">
-                <td>(if Point3 is)</td>
-                <td style="background: #0d53a8;"><b>Normal</b></td>
-                <td style="background: #0da872;"><b>Extended</b></td>
-                <td style="background: #1f7308;"><b>Fully Extended</b></td>
-              </tr>
-              <tr>
-                <td>Point 3</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Point 4</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Point 5</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div class="row" id="coins"></div>
-      <!-- Modal -->
-    </div>
-    <script src="src/index.js"></script>
-  </body>
 </html>
