--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 									<tr class="table-dark">
 										<td>(if Point3 is)</td>
 										<td style="background: #0d53a8;"><b>Normal</b></td>
-										<td style="background: #0da872;"><b>Extended</b></td>
+										<td style="background: #ff8000;"><b>Extended</b></td>
 										<td style="background: #1f7308;"><b>Fully Extended</b></td>
 									</tr>
 									<tr>
