--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 					
 				.calculator { grid-area: calculator; }
 
-				.card{background-color:rgba(0, 0, 0, 0.6); }
-				.offcanvas{background-color:rgba(0, 0, 0, 01); }
+				
 				.Links { grid-area: Links; }
 				.offcanvas-body{
 					overflow-y: hidden;
@@ -90,7 +89,7 @@
 									<canvas id="myChart"></canvas>
 								</div>
 							</div>
-				<div class="col-lg-3 card text-light">
+				<div class="col-lg-3 card ">
 				<div class="calculator my-auto">
 						<h5 class="card-title">Calculator</h5>
 						<hr>
@@ -209,11 +208,11 @@
 
 	<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
 		<div class="offcanvas-header">
-			<h5 id="offcanvasRightLabel" class="text-light"><i class="fas fa-star text-warning"></i>&nbsp;Favorites</h5>
+			<h5 id="offcanvasRightLabel" class=""><i class="fas fa-star text-warning"></i>&nbsp;Favorites</h5>
 			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
 		<div class="offcanvas-body">
-				<table class="table rounded  text-light">
+				<table class="table rounded  ">
 						<thead>
 							<tr>
 								<th>Logo</th>
@@ -227,7 +226,7 @@
 					</table>
 					<hr>
 					<div class="contact-buttons">
-							<a class="social github-social" href="https://github.com/abhiib02" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+							<a class="social github-social" href="https://github.com/abhiib02/elliot_wave_calc" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
 							<a class="social codepen-social" href="https://codepen.io/abhishek-bhardwaj" target="_blank"><i class="fab fa-codepen" aria-hidden="true"></i></a>
 							<a class="social twitter-social" href="https://twitter.com/Abhiib02" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
 							<a class="social linkedin-social" href="https://www.linkedin.com/in/abhishek-bhardwaj-191b9784/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
