--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 								<th>Name</th>
 								<th>Point 0</th>
 								<th>Point 1</th>
+								<th>Delete</th>
 								
 							</tr>
 						</thead>
