--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 	
 	#coins > tr > td {
 		width: 33%;
+		display: grid;
+		place-items: center;
+	}
+	#coins > tr > th {
+		width: 33%;
+		display: grid;
+		place-items: center;
 	}
 	
 	body {
