--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
 	
 	#coins > tr > td {
 		width: 33%;
+		border-radius: 3px;
 		display: grid;
 		place-items: center;
 		cursor: pointer;
+	}
+	#coins > tr > td:hover {
+		border-left:#0d53a8 3px solid;
+		border-radius: 3px;
 	}
 	#coins > tr > th {
 		width: 33%;
