--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 		justify-content: space-between;
 		
 	}
-	
+	#coins > tr {
+		border-left:#0d53a8 3px solid;
+		border-radius: 3px;
+	}
 	#coins > tr > td {
 		width: 33%;
 		border-radius: 3px;
@@ -46,10 +49,7 @@
 		place-items: center;
 		cursor: pointer;
 	}
-	#coins > tr > td:hover {
-		border-left:#0d53a8 3px solid;
-		border-radius: 3px;
-	}
+	
 	#coins > tr > th {
 		width: 33%;
 		display: grid;
