--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		justify-content: space-between;
 		
 	}
-	#coins > tr {
+	#coins > tr:hover {
 		border-left:#0d53a8 3px solid;
 		border-radius: 3px;
 	}
