--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		display: flex;
 		border-bottom-width: 1px;
 		justify-content: space-between;
-		
+		transition: all .3s ease;
 	}
 	#coins > tr:hover {
 		border-left:#0d53a8 3px solid;
