--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 		transition: all .3s ease;
 	}
 	#coins > tr:hover {
-		border-left:#0d53a8 3px solid;
-		border-radius: 3px;
+		background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(0,78,146,1) 100%);
 	}
 	#coins > tr > td {
 		width: 33%;
