--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		border-bottom-width: 1px;
 		justify-content: space-between;
 		transition: all .3s ease;
-		border-radius: 3px 3px 3px 3px;
+		border-radius: 10px;
 	}
 	#coins > tr:hover {
 		background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(0,78,146,1) 100%);
