--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
 				
 		</div>
 			</div>
-			<div class="d-flex justify-content-between m-2">
-					<sub><a class="btn-link" target="__blank" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118479506.app1">Learn Elliot Wave Thoery</a></sub>
-					<sub><a class="btn-link" target="__blank" href="https://bhardwaj.netlify.app/#/">Design and Developed By Abhishek Bhardwaj</a></sub>
+			
+					
 
-			</div>
+			
 		
 	</div>
 	<!-- Modal -->
@@ -245,6 +244,9 @@
 							<a class="social linkedin-social" href="https://www.linkedin.com/in/abhishek-bhardwaj-191b9784/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
 		
 						</div>
+						<hr>
+						<a class="btn-link" target="__blank" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118479506.app1">Learn Elliot Wave Thoery</a>
+					<a class="btn-link" target="__blank" href="https://bhardwaj.netlify.app/#/">Design and Developed By Abhishek Bhardwaj</a>
 		</div>
 	</div>
 	
