--- a/index.html
+++ b/index.html
@@ -245,8 +245,12 @@
 		
 						</div>
 						<hr>
-						<a class="btn-link" target="__blank" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118479506.app1">Learn Elliot Wave Thoery</a>
-					<a class="btn-link" target="__blank" href="https://bhardwaj.netlify.app/#/">Design and Developed By Abhishek Bhardwaj</a>
+						<ul>
+							<li><a class="btn-link" target="__blank" href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/9781118479506.app1">Learn Elliot Wave Thoery</a></li>
+							<li><a class="btn-link" target="__blank" href="https://bhardwaj.netlify.app/#/">Design and Developed By Abhishek Bhardwaj</a></li>
+						</ul>
+						
+					
 		</div>
 	</div>
 	
