--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		justify-content: space-between;
 		transition: all .3s ease;
 		border-radius: 10px;
-		
+		border-style: none !important;
 	}
 	#coins > tr:hover {
 		background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(0,78,146,1) 100%);
