--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		display: flex;
 		border-bottom-width: 1px;
 		justify-content: space-between;
-		transition: all .3s ease;
+		transition: all 1s ease;
 		border-radius: 10px;
 		border-style: none !important;
 	}
