--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
 		transition: all 1s ease;
 		border-radius: 10px;
 		border-style: none !important;
-		background-size: 0;
+		background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 100%);
 	}
 	#coins > tr:hover {
 		background: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(0,78,146,1) 100%);
-		background-size: cover;
 		
 	}
 	#coins > tr > td {
