--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		
 	}
 	#coins > tr:hover {
-		background: linear-gradient(-90deg, rgba(255,255,255,1) 97%, rgba(0,78,146,1) 97%, rgba(0,78,146,1) 100%);
+		background-image: linear-gradient(-90deg, rgba(255,255,255,1) 0%, rgba(0,78,146,1) 100%);
 		
 	}
 	#coins > tr > td {
