--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<input type="number" class="form-control" id="wave1e" placeholder="Point 1" /> </div>
 						<div class="mb-3">
 								<label for="exampleInputPassword1" class="form-label">Multiplier (only change when value is too small )</label>
-								<input type="number" class="form-control" id="Multiplier" placeholder="Multiplier" value=1/> </div>
+								<input type="number" class="form-control" id="Multiplier" placeholder="Multiplier" value="1"/> </div>
 							<div class="d-grid gap-2">
 									<button id="submit" class="btn btn-success btn-sm">Calculate</button>
 									<button id="save" class="btn btn-outline-primary btn-sm" disabled>Save</button>
