--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
 	<title>Elliot Waves Calculator</title>
 	<meta charset="UTF-8" />
+	<meta property="og:title" content="Elliot Waves Calculator">
+    <meta property="og:description" content="A calculator which utilizes elliot wave theory in technical chart analysis to determine possible price peaks and bottoms.">
+    <meta property="og:image" content="https://bhardwaj.netlify.app/img/ewc.33adb6cd.png">
+    <meta property="og:url" content="https://abhiib02.github.io/elliot_wave_calc/">
+    <meta property="og:type" content="Investment Tool" />
+    <meta name="twitter:title" content="Elliot Waves Calculator">
+    <meta name="twitter:description" content="A calculator which utilizes elliot wave theory in technical chart analysis to determine possible price peaks and bottoms.">
+    <meta name="twitter:image" content=" https://bhardwaj.netlify.app/img/ewc.33adb6cd.png">
+    <meta name="twitter:card" content="https://abhiib02.github.io/elliot_wave_calc/">
+	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
