--- a/index.html
+++ b/index.html
@@ -120,11 +120,9 @@
 						<h5 class="card-title">Calculator</h5>
 						<hr>
 						<div class="mb-3">
-							<label for="exampleInputEmail1" class="form-label">Wave 1 Starting Point Price</label>
-							<input type="number" class="form-control" id="wave1s" placeholder="Point 0" /> </div>
+							<input type="number" class="form-control" id="wave1s" placeholder="Wave 1 Starting Point Price" /> </div>
 						<div class="mb-3">
-							<label for="exampleInputPassword1" class="form-label">Wave 1 Ending Point Price</label>
-							<input type="number" class="form-control" id="wave1e" placeholder="Point 1" /> </div>
+							<input type="number" class="form-control" id="wave1e" placeholder="Wave 1 Ending Point Price" /> </div>
 						<div class="mb-3">
 								<label for="exampleInputPassword1" class="form-label">Multiplier (only change when value is too small )</label>
 								<input type="number" class="form-control" id="Multiplier" placeholder="Multiplier" value="1"/> </div>
