--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						<div class="mb-3">
 							<input type="number" class="form-control" id="wave1e" placeholder="Wave 1 Ending Point Price" /> </div>
 						<div class="mb-3">
-								<label for="exampleInputPassword1" class="form-label">Multiplier (only change when value is too small )</label>
+								<label for="exampleInputPassword1" class="form-label">Multiplier <sup>(only change when value is too small )</sup></label>
 								<input type="number" class="form-control" id="Multiplier" placeholder="Multiplier" value="1"/> </div>
 							<div class="d-grid gap-2">
 									<button id="submit" class="btn btn-success btn-sm">Calculate</button>
