--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 						<h5 class="card-title">Calculator</h5>
 						<hr>
 						<div class="mb-3">
-							<input type="number" class="form-control" id="wave1s" placeholder="Wave 1 Starting Point Price" /> </div>
+							<input type="number" class="form-control" id="wave1s" placeholder="Starting Price" /> </div>
 						<div class="mb-3">
-							<input type="number" class="form-control" id="wave1e" placeholder="Wave 1 Ending Point Price" /> </div>
+							<input type="number" class="form-control" id="wave1e" placeholder="Ending Price" /> </div>
 						<div class="mb-3">
-								<label for="exampleInputPassword1" class="form-label">Multiplier <sup>(only change when value is too small )</sup></label>
-								<input type="number" class="form-control" id="Multiplier" placeholder="Multiplier" value="1"/> </div>
+								<label for="exampleInputPassword1" class="form-label">Multiplier <sup>(value is small)</sup></label>
+								<input type="number" class="form-control" id="Multiplier" placeholder="Multiplier"/> </div>
 							<div class="d-grid gap-2">
 									<button id="submit" class="btn btn-success btn-sm">Calculate</button>
 									<button id="save" class="btn btn-outline-primary btn-sm" disabled>Save</button>
