--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</div>
 
 		<div class="m-2">
-			<div class="row">
+			<div class="row g-2">
 					<div class="col-lg-9 card ">
 							<div class="chart-box  p-2">
 									<canvas id="myChart"></canvas>
