TRADING VIEW BUTTON

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 								<th>Name</th>
 								<th>Point 0</th>
 								<th>Point 1</th>
+								<th>Chart</th>
 								<th>Delete</th>
 								
 							</tr>
@@ -266,6 +267,7 @@
 					
 		</div>
 	</div>
+	<!-- Modal -->
 	
 
 
