--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<title>Elliot Waves Calculator</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="📈">
-	<link rel="icon" type="image/png" sizes="32x32" href="📈">
-	<link rel="icon" type="image/png" sizes="16x16" href="📈">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://img.icons8.com/emoji/344/chart-increasing-emoji.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://img.icons8.com/emoji/344/chart-increasing-emoji.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://img.icons8.com/emoji/344/chart-increasing-emoji.png">
 	<meta charset="UTF-8" />
 	<meta property="og:title" content="Elliot Waves Calculator">
     <meta property="og:description" content="A calculator which utilizes elliot wave theory in technical chart analysis to determine possible price peaks and bottoms.">
