--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<div class="text-light">
 
 			<h1 class="p-2 d-flex justify-content-center display-5">
-					Elliot Waves Calculator
+				📈 Elliot Waves Calculator 📈
 					
 				</h1>
 				
@@ -120,7 +120,7 @@
 							</div>
 				<div class="col-lg-3 card ">
 				<div class="calculator my-auto">
-						<h5 class="card-title">Calculator</h5>
+						<h5 class="card-title px-2">Calculator</h5>
 						<hr>
 						<div class="mb-3">
 							<input type="number" class="form-control" id="wave1s" placeholder="Starting Price" /> </div>
