added avg price calculator

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 									<button id="save" class="btn btn-outline-primary btn-sm" disabled>Save</button>
 									<button id="getChart" type="button" class="btn btn-outline-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal" disabled> Details </button>
 									<button class="btn btn-outline-dark btn-sm" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fas fa-star text-warning"></i>&nbsp;Favorites</button>
+									<a target="_blank" href="" class="btn btn-dark btn-sm">Average Price Calculator ↗</a>
+									
 							</div>
 					</div>
 				</div>
