me to it change in sub title

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					
 				</h1>
 				
-			<div class="mb-2 d-flex justify-content-center display-8"> Just Tell Me Wave 1 Starting and ending price </div>
+			<div class="mb-2 d-flex justify-content-center display-8"> Just Tell it Wave 1 Starting and Ending price </div>
 		</div>
 
 		<div class="m-2">
